# indi-qt-test

./: CMakeLists.txt  client.cpp  client.h  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
